tests/bad/12_undeclared_var_7.ris
int add(int a, int b):
    return a + b;

void main():
    let int a = 4;
    add(a, b);
    return;