tests/bad/12_undeclared_var_7.err
Type error in line 6, column 12:
variable b is not defined
